refactor: Java 26 best practices sweep
- ReversalEngine: Remove 312-line commented-out dead code block and unused constants
- Iso8583Application: Fix main() visibility, remove orphaned methods, promote docs to class Javadoc
- DukptEngine: Merge identical BDK_MASK/KEY_GEN_MASK into single DERIVATION_MASK
- IsoTcpServer: Replace volatile boolean with AtomicBoolean, remove dead unpackMessage(), add IsoMetrics import, remove dead @RequiredArgsConstructor
- ISO8583ServiceImpl: Add proper imports (IsoMetrics, PostConstruct, StandardCharsets), remove isoMetrics null guards, extract resolveKeyName() helper, align field declarations
- IsoEchoManager: Consolidate dual-constructor pattern to single @Autowired constructor, add IsoMetrics import, fix field ordering (constants -> fields -> ctor -> methods)
- BatchClearingEngine: Remove commented duplicate import, simplify buildLockKey() to reuse resolveNetworkId()
- IsoSpec: Make class final, add private constructor, standardize DE 1 to canonical constructor
- IsoMessageProcessor: Rename generateRrn/generateAuthorizationCode to simulatedRrn/simulatedAuthCode, use formatted() idiom
- Config: Add Javadoc explaining findAndRegisterModules() / JavaTimeModule rationale
- IsoEchoManagerTest: Update constructor call to match new single 3-arg signature